tests/rosetta/out/Go/bulls-and-cows.error
parse: error[P999]: tests/rosetta/x/Mochi/bulls-and-cows.mochi:48:31: unexpected token "-" (expected PostfixExpr)
  --> tests/rosetta/x/Mochi/bulls-and-cows.mochi:48:31

 48 |       if indexOf(seen, cg) != -1 {
    |                               ^

help:
  Parse error occurred. Check syntax near this location.